fix(shopify): support CSV Excel format + fix file detection patterns
Parse Shopify "Plain CSV for Excel" export where data rows are wrapped in outer quotes (auto-detect + re-parse)
Fix payouts pattern accent mismatch (Détails vs Details)
Fix payout_details pattern: flat files instead of subdirectory
Enable payout_details matching in frontend (regex + multi-file UI)

--- a/config/channels.yaml
+++ b/config/channels.yaml
@@ -3,8 +3,8 @@ channels:
     files:
       sales: "Ventes Shopify*.csv"
       transactions: "Transactions Shopify*.csv"
-      payouts: "Détails versements*.csv"
-      payout_details: "Detail transactions par versements/*.csv"
+      payouts: "D?tails versements*.csv"
+      payout_details: "Detail transactions par versements*.csv"
       returns: "Total des retours*.csv"
     multi_files: ["payout_details"]
     optional_files: ["returns", "payout_details"]
