--- a/tests/fixtures/config/channels.yaml
+++ b/tests/fixtures/config/channels.yaml
@@ -4,7 +4,7 @@ channels:
       sales: "ventes.csv"
       transactions: "transactions.csv"
       payouts: "versements.csv"
-      payout_details: "detail_versements/*.csv"
+      payout_details: "detail_versements*.csv"
       returns: "returns.csv"
     multi_files: ["payout_details"]
     optional_files: ["returns", "payout_details"]
